Fix spacing in Headline

--- a/src/components/CompanyDetail/styles.module.scss
+++ b/src/components/CompanyDetail/styles.module.scss
@@ -39,6 +39,7 @@
 
   .mainInfo {
     margin-left: 0;
+    margin-top: $spacing-l;
   }
 
   .photos {
